deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
spec:
  replicas: 2
  selector:
    matchLabels:
      name: app1
  template:
    metadata:
      labels:
        name: app1
    spec:
      containers:
      - name: application
        image: gcr.io/test-stacklabs-3/app1
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 3000
