service.yml
apiVersion: v1
kind: Service
metadata:
  name: app1-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
  selector:
    name: app1
