ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app1-ingress
spec:
  rules:
    - http:
        paths:
          - path: /test123
            backend:
              serviceName: app1-service
              servicePort: 80
